--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body {
     padding: 0;
     font-family: sans-serif;
     background: url(background.jpg);
-    background-size: cover;
+    background-size: 100%;
+    
 }
 
 .box {
