--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     font-family: sans-serif;
     background: url(background.jpg);
-    background-size: 100%;
+    background-size: cover;
     
 }
 
